change plus friend name
h jay

--- a/find.html
+++ b/find.html
@@ -81,10 +81,10 @@
         </h5>
         <li class="find__friend friend">
           <div class="friend__column">
-            <img class="friend__avatar" src="images/zerotak.jpg" />
+            <img class="friend__avatar" src="images/hjay.jpg" />
             <div class="friend__content">
               <span class="friend__name">
-                Zero-tak
+                H-Jay
               </span>
             </div>
           </div>
