Change friends list

--- a/friends.html
+++ b/friends.html
@@ -88,6 +88,35 @@
             </span>
           </div>
         </li>
+        <li class="friends__friend friend">
+          <div class="friend__column">
+            <img class="friend__avatar" src="images/zerotak.jpg" />
+            <div class="friend__content">
+              <span class="friend__name">
+                Park zero-tak
+              </span>
+            </div>
+          </div>
+          <div class="friend__now-listening">
+            <span>
+              찐이야 - 영탁
+              <i class="fas fa-play"></i>
+            </span>
+          </div>
+        </li>
+        <li class="friends__friend friend">
+          <div class="friend__column">
+            <img class="friend__avatar" src="images/jangminho.jpg" />
+            <div class="friend__content">
+              <span class="friend__name">
+                Jang Min-ho
+              </span>
+              <span class="friend__status">
+                Subscribe my Youtube channel♥
+              </span>
+            </div>
+          </div>
+        </li>
       </ul>
     </main>
 
