index screen change

--- a/index.html
+++ b/index.html
@@ -63,6 +63,52 @@
             </div>
           </a>
         </li>
+        <li class="chats__chat chat">
+          <a href="chat.html">
+            <div class="chats__chat friend friend">
+              <div class="friend__column">
+                <img class="friend__avatar" src="images/jangminho.jpg" />
+                <div class="friend__content">
+                  <span class="friend__name">
+                    Uncle
+                  </span>
+                  <span class="friend__bottom-text">
+                    I voted early~
+                  </span>
+                </div>
+              </div>
+              <div class="chat__time">
+                <span class="chat__timestamp">
+                  30 min
+                </span>
+                <div class="chat__badge">1</div>
+              </div>
+            </div>
+          </a>
+        </li>
+        <li class="chats__chat chat">
+          <a href="chat.html">
+            <div class="chats__chat friend friend">
+              <div class="friend__column">
+                <img class="friend__avatar" src="images/zerotak.jpg" />
+                <div class="friend__content">
+                  <span class="friend__name">
+                    Bro
+                  </span>
+                  <span class="friend__bottom-text">
+                    Have you seen The Walking Dead?
+                  </span>
+                </div>
+              </div>
+              <div class="chat__time">
+                <span class="chat__timestamp">
+                  1 hour
+                </span>
+                <div class="chat__badge">2</div>
+              </div>
+            </div>
+          </a>
+        </li>
       </ul>
     </main>
     <nav class="nav">
