--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </a>
         </li>
         <li class="chats__chat chat">
-          <a href="chat.html">
+          <a href="chat2.html">
             <div class="chats__chat friend friend">
               <div class="friend__column">
                 <img class="friend__avatar" src="images/jangminho.jpg" />
@@ -87,7 +87,7 @@
           </a>
         </li>
         <li class="chats__chat chat">
-          <a href="chat.html">
+          <a href="chat3.html">
             <div class="chats__chat friend friend">
               <div class="friend__column">
                 <img class="friend__avatar" src="images/zerotak.jpg" />
