--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <img class="friend__avatar" src="images/hero.jpg" />
                 <div class="friend__content">
                   <span class="friend__name">
-                    Hero
+                    ♡Hero♡
                   </span>
                   <span class="friend__bottom-text">
                     Can I come over tomorrow?
