--- a/chat.html
+++ b/chat.html
@@ -31,7 +31,7 @@
           <a href="index.html" class="header__back-btn">
             <i class="fas fa-arrow-left"></i>
           </a>
-          <h1 class="header__title">Hero</h1>
+          <h1 class="header__title">♡Hero♡</h1>
         </div>
         <div class="header__header-column">
           <span class="header__icon">
@@ -53,7 +53,7 @@
             <span class="message__bubble">
               Lovie, you home?
             </span>
-            <span class="message__author">Hero</span>
+            <span class="message__author">♡Hero♡</span>
           </div>
         </li>
         <li class="sent-message message">
@@ -67,7 +67,7 @@
             <span class="message__bubble">
               Can I come over tomorrow?
             </span>
-            <span class="message__author">Hero</span>
+            <span class="message__author">♡Hero♡</span>
           </div>
         </li>
       </ul>
